# notebooks

./: .gitignore  pyproject.toml  vmi.ipynb  vmi.py
code/datasets/gov/giscentras/nomenklatura/: notes.sh
code/datasets/gov/pd/eiis/: notes.sh
code/datasets/gov/vsdfv/apdraustieji/: demo.sh
datasets/gov/bpc/pagalbos_skambuciai/: pagalbos_skambuciai.ipynb  pagalbos_skambuciai.py
datasets/gov/ivpk/adk/: demo.sh
datasets/gov/lsd/covid19/: notes.sh
datasets/gov/muitine/matavimo-vienetai-ir-valiutos/: notes.sh
datasets/gov/regitra/tp/: notes.sh
datasets/gov/vmi/gyventoju_islaidos/: vmi.ipynb  vmi.py
datasets/gov/vmi/gyventojų_patirtos_išlaidos/: vmi.ipynb  vmi.py
datasets/gov/vmi/verslo_liudijimai/: VersloLiudijimas.ipynb  VersloLiudijimas.py
datasets/gov/vsdfv/apdraustieji/: demo.ipynb  demo.py
datasets/gov/vsdfv/pensijos/: demo.ipynb  demo.py
datasets/gov/vsdfv/sdi/: notes.sh
